<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/img_ava_big"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="18dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <RelativeLayout
            android:id="@+id/block_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/img_ava_big"
            android:layout_toRightOf="@id/img_ava_big">


            <TextView
                android:id="@+id/tv_ID"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/img_ava_mid"

                android:layout_alignLeft="@id/img_ava_mid"
                android:text="@string/id_addicts"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_ID"
                android:layout_alignTop="@id/tv_ID"
                android:text="@string/yesterday" />

            <ImageView
                android:id="@+id/img_ava_mid"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/img_ava_mid"
                android:layout_alignTop="@id/img_ava_mid"

                android:text="@string/you_photo_message" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/img_ava_small"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/block_info"
            android:layout_marginRight="12dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@mipmap/ic_launcher" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:gravity="center"
        android:weightSum="3">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="16"
            android:text="@string/lorem" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="2"
            android:text="@string/text_like_button" />
    </LinearLayout>

    <Button
        android:id="@+id/btnWiki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/btn" />

</FrameLayout>